# picoDSP

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  build.sh  memory.x  picodsp.uf2
.cargo/: config.toml
.github/workflows/: rust.yml
src/: main.rs
src/control/: midi.rs
src/data/: presets.rs  storage.rs
src/dsp/: bypass.rs  lfo.rs  mod.rs  moog.rs  oscillator.rs  reverb.rs  sum.rs
src/tasks/: core0.rs  core1.rs
src/usb/: device.rs  logger.rs  uac1.rs
